Correção de erros ortograficos e texto adicionado no perfil

--- a/1/index.html
+++ b/1/index.html
@@ -40,16 +40,16 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/qqqq.png" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>As costas</h3>
-								<p>Esta ilustração tem como objetivo de representar que há sempre algo que não queremos mostrar no mundo de fora nem a nós proprios por isso mesmo isto tudo encontra-se nas nossas costas. O trabalho foi criado na aplicação procreate passando depois para o photoshop para adiocionar efeitos.</p>
+								<p>Esta ilustração tem como objetivo de representar que há sempre algo que não queremos mostrar no mundo de fora nem a nós próprios, por isso mesmo isto tudo encontra-se nas nossas costas. O trabalho foi criado na aplicação procreate passando depois para o photoshop para adiocionar efeitos.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/tumblr_pewyrxLDVk1uguhmm_500.png" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Fusionem</h3>
-								<p>Neste busto esta reprensentado a fusão entre o Homem e a Natureza Toda a ilustração foi criada na aplicação de procreate.</p>
+								<p>Neste busto esta representado a fusão entre o Homem e a Natureza. Toda a ilustração foi criada na aplicação de procreate.</p>
 							</article>
 							<h2>Concept Art</h2>
 							<div class="row">
-								<p>Todo este conjunto de desenhos pertencem a um trabalho criado no âmbito da unidade curricular de Pintura Digital onde tinhamos como objetivo criar uma ilustração com uma personagem criada por nós ou não. Decidi fazer uma ilustração com uma personagem minha e para isso era necessário fazer estudos dela. </p>
+								<p>Todo este conjunto de desenhos pertencem a um trabalho criado no âmbito da unidade curricular de Pintura Digital onde tinhamos como objetivo de criar uma ilustração com uma personagem criada por nós ou não. Decidi fazer uma ilustração com uma personagem minha e para isso era necessário fazer estudos dela. </p>
 								<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/tumblr_pb07dj8uml1w6x16lo1_1280.png" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
@@ -76,7 +76,7 @@
 				<!-- Three -->
 					<section id="three">
 						<h2>Perfil</h2>
-						<p>Sou</p>
+						<p>Olá! Sou a Patrícia Elias, estou no final de acabar a licenciatura em Artes visuais e Tecnologias na Escola Superior de Educação de Lisboa, com um grande interesse em Ilustração e Concept Art. Domino programas tais como, Photoshop, Procreate, Indesign, Sony Vegas, Lighroom e Illustrador.	</p>
 						<div class="row">
 
 								</ul>
@@ -90,7 +90,7 @@
 									<ul class="icons">
 										<li><a href="https://twitter.com/wairudo_shadow" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="https://www.instagram.com/wild_shadow_art/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										
+
 									<li>
 
 									</li>
